# investment-sourcing-agent

./: .gitignore  README.md  pyproject.toml
agents/investment-sourcing-agent/: AGENTS.md  investment-sourcing-agent.agent.md
config/: scoring_rubrics.yaml  sources.yaml  taste_prompt.yaml
docs/: 使用说明.md  执行清单.md  架构说明.md
docs/superpowers/specs/: 2026-06-19-investment-sourcing-agent-design.md
scripts/: daily_sourcing_runner.py
skills/investment-sourcing-agent/: SKILL.md  investment-sourcing-agent.skill.md
src/sourcing_agent/: __init__.py  cli.py  config.py  db.py  models.py  routing.py  scheduler.py  workflow.py
src/sourcing_agent/outputs/: __init__.py  digest.py  memo.py  outreach.py
src/sourcing_agent/processors/: __init__.py  common.py  company.py  paper.py  post.py  repo.py
src/sourcing_agent/review/: __init__.py  api.py
src/sourcing_agent/scoring/: __init__.py  score.py
src/sourcing_agent/sources/: __init__.py  arxiv.py  github.py  hn.py  webpage.py  x_search.py
tests/: test_cli.py  test_config.py  test_models.py  test_outputs.py  test_processors.py  test_review.py  test_routing.py  test_scoring.py  test_sources.py  test_storage.py
